<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_menu_group_primary"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_menu_my_books"
            android:icon="@drawable/icon_tags"
            android:title="@string/home_nav_menu_my_books"
            />
        <item
            android:id="@+id/nav_menu_add_book"
            android:icon="@drawable/icon_tags_add"
            android:title="@string/home_nav_menu_add_book"
            />
    </group>

    <group
        android:id="@+id/nav_menu_group_secondary"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_menu_about"
            android:icon="@drawable/icon_info"
            android:title="@string/home_nav_menu_about"
            />
    </group>
</menu>
