<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/primary_light"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <android.support.v7.widget.CardView
            style="@style/AppCardView"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    style="@style/AppMediumText"
                    android:textColor="@color/secondary_text"
                    android:layout_width="match_parent"
                    android:text="@string/add_book_instructions"
                    android:gravity="center"
                    />

                <LinearLayout
                    android:id="@+id/add_book_scan_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    >

                    <Button
                        android:id="@+id/add_book_scan_button"
                        style="@style/AppButton"
                        android:layout_width="match_parent"
                        android:text="@string/add_book_scan_button"
                        />

                    <View style="@style/SimpleDividerLine" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/add_book_prefix"
                        style="@style/AppLargeText"
                        android:text="@string/add_book_isbn_label"
                        android:textStyle="bold"
                        android:layout_centerVertical="true"
                        />

                    <EditText
                        android:id="@+id/add_book_search_edit_text"
                        style="@style/AppLargeText"
                        android:layout_width="match_parent"
                        android:layout_toRightOf="@id/add_book_prefix"
                        android:layout_toEndOf="@id/add_book_prefix"
                        android:layout_centerVertical="true"
                        android:maxLines="1"
                        android:lines="1"
                        android:maxLength="10"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        />
                </RelativeLayout>

                <TextView
                    android:id="@+id/add_book_search_status"
                    style="@style/AppMediumText"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/add_book_search_result_container"
            style="@style/AppCardView"
            android:visibility="gone"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                >
                <io.github.marcelbraghetto.alexandria.widgets.BookDetailsView
                    android:id="@+id/add_book_search_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </FrameLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>